tests/invalid/type/const_reassign.pts
function main() : void {
  const int x = 1;
  x = 2;
}
